--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,5 +1,25 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<h1 style="text-align:center">Bienvenue sur notre site</h1>
+    {% if not app.user %}
+        <div class="jumbotron">
+            <h1 class="display-3">Visiteurs</h1>
+            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </p>
+        </div>
+    {% else %}
+        <div class="jumbotron">
+            <h1 class="display-3">Responsable</h1>
+            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </p>
+        </div>
+    {% endif %}
 {% endblock %}
