--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -3,10 +3,12 @@
 {% block body %}
 <h1>Inscription</h1>
 
-{{ form_start(form) }}
-{{ form_row(form.username, {'label': 'Nom d\'utilisateur', 'attr' : {'placeholder' : 'Entrez le nom d\'utilisateur'}  }) }}
-{{ form_row(form.email, {'label': 'Adresse mail', 'attr' : {'placeholder' : 'Entrez l\'adresse mail'}  } )}}
-{{ form_row(form.password, {'label': 'Mot de passe', 'attr' : {'placeholder' : 'Entrez le mot de passe'}  }) }}
-{{ form_row(form.confirm_password, {'label': 'Confirmation du mot de passe', 'attr' : {'placeholder' : 'Confirmez le mot de passe'}  }) }}
-<button type="submit" class="btn btn-success" style="float:right">Inscription</button>
+    {{ form_start(form) }}
+    {{ form_row(form.username, {'label': 'Nom d\'utilisateur', 'attr' : {'placeholder' : 'Entrez le nom d\'utilisateur'}  }) }}
+    {{ form_row(form.email, {'label': 'Adresse mail', 'attr' : {'placeholder' : 'Entrez l\'adresse mail'}  } )}}
+    {{ form_row(form.password, {'label': 'Mot de passe', 'attr' : {'placeholder' : 'Entrez le mot de passe'}  }) }}
+    {{ form_row(form.confirm_password, {'label': 'Confirmation du mot de passe', 'attr' : {'placeholder' : 'Confirmez le mot de passe'}  }) }}
+    <button type="submit" class="btn btn-success" style="float:right">Inscription</button>
+    {{ form_end(form) }}
+
 {% endblock %}
