--- a/templates/vip/index.html.twig
+++ b/templates/vip/index.html.twig
@@ -2,20 +2,52 @@
 
 
 {% block body %}
-<section id="main">
 <h1 style="text-align:center">Liste des Joueurs</h1>
 
-{% for joueur in joueurs %}
+  {% if not app.user %}
+    {% for joueur in joueurs %}
+      <div style="display:inline-block;width:25%;margin:4%">
+        <h4 class="card-header"><a href="{{ path('details_joueur', {'id': joueur.id}) }}">{{ joueur.nom }} {{ joueur.prenom }}</a></h4>
+        <img style="height: 200px; width: 100%; display: block;" src="{{joueur.image}}" alt="Photo joueur">
+        <div class="card-body">
+          <p class="card-text">Classement ATP : {{joueur.classementatp}}</p>
+        </div>
+      </div>
+      {% endfor %}
+  {% else %}
+    
 
-<div style="display:inline-block;width:25%;margin:4%">
-  <h4 class="card-header"><a href="{{ path('details_joueur', {'id': joueur.id}) }}">{{ joueur.nom }} {{ joueur.prenom }}</a></h4>
-  <img style="height: 200px; width: 100%; display: block;" src="{{joueur.image}}" alt="Photo joueur">
-  <div class="card-body">
-    <p class="card-text">Classement ATP : {{joueur.classementatp}}</p>
-  </div>
-</div>
+    <table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Image</th>
+      <th scope="col">Nom</th>
+      <th scope="col">Prenom</th>
+      <th scope="col">Age</th>
+      <th scope="col">Nationalité</th>
+      <th scope="col">Taille</th>
+      <th scope="col">Poids</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+   <tbody>
+   {% for joueur in joueurs %}
+  <tr>
+      <td><img width="50px" src="{{joueur.image}}" alt="Photo joueur"></td>
+      <td>{{ joueur.nom }}</td>
+      <td>{{ joueur.prenom }}</td>
+      <td>{{ joueur.age }}</td>
+      <td>{{ joueur.nationalite }}</td>
+      <td>{{ joueur.taille }}</td>
+      <td>{{ joueur.poids }}</td>
+      <td><a href="{{ path('details_joueur', {'id': joueur.id}) }}">Consulter la fiche</a>
+      <br><a href="">Modifier les informations</a></td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+    
+      
+  {% endif %}
 
-{% endfor %}
-
-</section>
 {% endblock %}
