--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,25 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {% if not app.user %}
+{% if not app.user %}
         <div class="jumbotron">
-            <h1 class="display-3">Visiteurs</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <h1 class="display-3">Bienvenue à l'OpenLyon</h1>
+            <p class="lead">Visiteurs</p>
             <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-            </p>
         </div>
-    {% else %}
-        <div class="jumbotron">
-            <h1 class="display-3">Responsable</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+{% else %}
+    <div class="jumbotron">
+            <h1 class="display-3">Bienvenue à l'OpenLyon</h1>
+            <p class="lead">Admin</p>
             <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-            </p>
         </div>
-    {% endif %}
+{% endif %}
 {% endblock %}
