--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}OpenLyon{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/style.css') }}">
-            <link href="https://bootswatch.com/4/lux/bootstrap.min.css" rel="stylesheet">
+            <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
         {% endblock %}
     </head>
     <body>
@@ -22,12 +22,15 @@
                 </li>
                 {% if not app.user %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">À propos</a>
+                    <a class="nav-link" href="{{path('apropos')}}">À propos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('security_login') }}">Connexion</a>
                 </li>
                 {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('liste_echanges') }}">Echange</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('security_logout') }}">Deconnexion</a>
                 </li>
